<resources>
    <string name="app_name">AndroidPU121</string>

    <!-- region Home -->
    <string name="main_tv_title">Знайомство з Android</string>
    <string name="main_btn_views">Елементи UI</string>
    <string name="main_btn_calc">Калькулятор</string>
    <string name="main_btn_2048">2048</string>
    <string name="main_btn_rates">Курси валют</string>
    <string name="main_btn_chat">Чат</string>
    <!-- endregion -->

    <string name="chat_btn_send">Чат</string>
    <string name="chat_tv_nik">Нік у чаті:</string>
    <string name="chat_et_nik">DNS</string>


    <!-- region Rates -->
    <string name="rates_ex_thread">Відкриття з\'єднання з UI (основного) потоку</string>
    <string name="rates_btn_by_alpha">За назвою</string>
    <!-- endregion -->

    <!-- region 2048 -->
    <string name="game_tv_title">2048</string>
    <string name="game_tv_hint">Поєднуйте числа щоб одержати 2048</string>
    <string name="tv_2">2</string>
    <string name="tv_4">4</string>
    <string name="tv_8">8</string>
    <string name="tv_16">16</string>
    <string name="tv_32">32</string>
    <string name="tv_64">64</string>
    <string name="tv_128">128</string>
    <string name="tv_256">256</string>
    <string name="tv_512">512</string>
    <string name="game_toast_no_move">Немає руху</string>
    <string name="game_tv_score">РАХУНОК\n%d</string>
    <string name="game_tv_best">РЕКОРД\n%d</string>
    <string name="game_over">Немає ходу</string>
    <string name="game_over_dialog">Гра провалена.\nПочати нову?</string>
    <string name="game_over_yes">Так</string>
    <string name="game_over_undo">Хід назад</string>
    <string name="game_over_no">Ні</string>
    <!-- endregion -->

    <string name="views_tv_title">Елементи UI (Views)</string>

    <string name="calc_tv_title">Калькулятор</string>
    <string name="calc_btn_percent">%</string>
    <string name="calc_btn_ce">CE</string>
    <string name="calc_btn_c">C</string>
    <string name="calc_btn_backspace">\u232B</string>
    <string name="calc_btn_inverse">\u00B9/\u2093</string>
    <string name="calc_btn_square">x\u00B2</string>
    <string name="calc_btn_sqrt">\u221A\u2093\u0304</string>
    <string name="calc_btn_divide">\u00F7</string>

    <string name="calc_btn_multiplication">\u2715</string>
    <string name="calc_btn_minus">\u2212</string>
    <string name="calc_btn_plus">\uFF0B</string>
    <string name="calc_btn_plus_minus">\u207A\u2215\u208B</string>
    <string name="calc_btn_comma">,</string>
    <string name="calc_btn_equal">\uFF1D</string>
    <string name="calc_btn_0">\u2205</string>
    <string name="calc_btn_1">1</string>
    <string name="calc_btn_2">2</string>
    <string name="calc_btn_3">3</string>
    <string name="calc_btn_4">4</string>
    <string name="calc_btn_5">5</string>
    <string name="calc_btn_6">6</string>
    <string name="calc_btn_7">7</string>
    <string name="calc_btn_8">8</string>
    <string name="calc_btn_9">9</string>
    <string name="calc_div_zero_message">Cannot divide by zero</string>
</resources>