<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/calc_background"
    tools:context=".CalcActivity">

    <TextView
        android:id="@+id/calc_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/calc_result_text"
        android:text="@string/calc_tv_title"/>
    <TextView
        android:id="@+id/calc_tv_expression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/calc_expression_text"
        android:textSize="18sp"
        tools:text="99 x 6 ="/>
    <TextView
        android:id="@+id/calc_tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/calc_result_text"
        android:textSize="52sp"
        android:textStyle="bold"
        tools:text="594"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:padding="2dp" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                android:id="@+id/calc_btn_percent"
                android:text="@string/calc_btn_percent"
                style="@style/calc_btn_func" />
            <Button
                android:id="@+id/calc_btn_ce"
                android:text="@string/calc_btn_ce"
                style="@style/calc_btn_func" />
            <Button
                android:id="@+id/calc_btn_c"
                android:text="@string/calc_btn_c"
                style="@style/calc_btn_func" />
            <Button
                android:id="@+id/calc_btn_backspace"
                android:text="@string/calc_btn_backspace"
                style="@style/calc_btn_func" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                android:id="@+id/calc_btn_inverse"
                android:text="@string/calc_btn_inverse"
                style="@style/calc_btn_func" />
            <Button
                android:id="@+id/calc_btn_square"
                android:text="@string/calc_btn_square"
                style="@style/calc_btn_func" />
            <Button
                android:id="@+id/calc_btn_sqrt"
                android:text="@string/calc_btn_sqrt"
                style="@style/calc_btn_func" />
            <Button
                android:id="@+id/calc_btn_divide"
                android:text="@string/calc_btn_divide"
                style="@style/calc_btn_func" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

</LinearLayout>